fix content overflow on Chrome

--- a/app/styles/app.sass
+++ b/app/styles/app.sass
@@ -121,7 +121,6 @@ body
 
 .navigation.bottom
   background: #313131
-  padding-top: 10px
 
   .nav-item
     color: #f1f1f1
